--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div class="form-group">
             <label class="control-label col-sm-2" for="pwd">Mobile No:</label>
             <div class="col-sm-10">          
-              <input type="number" class="form-control" id="mob" placeholder="Enter mobile no" name="pwd">
+              <input type="text" class="form-control" id="mob" placeholder="Enter mobile no" name="pwd">
             </div>
           </div>
         <div class="form-group">        
