--- a/login2.html
+++ b/login2.html
@@ -77,18 +77,18 @@
     </div>
     <div class="col-sm-4 text-left"> 
       <h1>Welcome</h1>
-      <form class="form-horizontal" name="form1" action="index.html" onsubmit="return validate()">
+      <form class="form-horizontal" name="form1" action="index.html" onsubmit="return validateSignup()">
         <div class="form-group">
           <label class="control-label col-sm-2" for="email">Email:</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputEmail4" placeholder="Enter email" name="email" onchange="return validateEmail(this)">
+            <input type="text" class="form-control" id="inputEmail4" placeholder="Enter email" onchange="return validateEmail(this)">
             <label for="emailerror" id="emailerror" class="form-label"></label>
           </div>        
         </div>
         <div class="form-group">
           <label class="control-label col-sm-2" for="pwd">Password:</label>
           <div class="col-sm-10">          
-            <input type="password" class="form-control" id="psw-input" name="pwd">
+            <input type="password" class="form-control" id="psw-input" onchange="return validatePassword(this)">
             <div id="pswmeter" class="mt-3"></div>
             <div id="pswmeter-message" class="mt-3"></div>
           </div>
